--- a/css/responsive.css
+++ b/css/responsive.css
@@ -51,6 +51,7 @@
         margin: 8px auto;
         border-radius: 2px;
     }
+    /* navvvv */
     .nav{
         flex-direction: column;
         background: rgb(42, 17, 82);
