--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -1,7 +1,5 @@
 
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
+/*--------------------------------------------------------------/*
 
 body {
     font-family: "Open Sans", sans-serif;
@@ -26,7 +24,6 @@ h5,
 h6 {
     font-family: "Raleway", sans-serif;
 }
-
 
 /*--------------------------------------------------------------
 # Back to top button
