--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -2,6 +2,22 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+::-webkit-scrollbar {
+    width: 6px;
+}
+::-webkit-scrollbar-track {
+box-shadow: inset 0 0 5px rgb(70, 55, 207); 
+border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+background: #2eafec;
+border: solid 1px rgb(0, 0, 0);
+border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+background: #ff00bf; 
+
+}
 /* =====variables==== */
 :root{
     --color-bg: linear-gradient(0deg, rgba(14,40,73,1) 0%, rgba(4,11,20,1) 100%);;
