--- a/css/responsive.css
+++ b/css/responsive.css
@@ -137,7 +137,7 @@
         text-align: center;
         font-size: 30px;
         margin: 20px 0 20px 0 20px;
-        text-shadow: 1px 1px 10px black, 0 0 1em blue, 0 0 .5em blue;
+        text-shadow: 1px 1px 10px black, 0 0 10px blue, 0 0 10px blue;
        
     }
 }
