--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 :root{
     --color-1: #0ff;
-    --color-2: #2f69fd;
+    --color-2: #6993fd;
     --color-3: #2f00ff;
     --color-4: #ff00a5;
     --color-5: #ff5e00;
@@ -213,16 +213,17 @@ nav ul li a:hover{
     display: flex;
     height: 860px;
     width: 100%;
-    /* background-image: url(../img/500.jpg); */
-    background-color: var(--color-bg);
+    background-image: url(../img/banner1.jpg);
+    /* background-color: var(--color-bg); */
     background-size: 100% 100%;
     overflow: hidden;
     background-position: center;
 }
 .home-text{
     align-content: center;
+    justify-content: center;
     color: #fff;
-    background: rgba(0, 0, 0, 0.37);
+    background: rgba(0, 0, 0, 0.575);
     margin: 50px auto;
     margin-top: 200px;
     max-width: 60%;
@@ -231,6 +232,7 @@ nav ul li a:hover{
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.678);
 }
 .home-text h1 {
+    font-family: 'Varela Round', sans-serif;
     padding-top: 20px;
     color: #00ffc8;
     text-align: center;
@@ -238,23 +240,26 @@ nav ul li a:hover{
     margin: 20px 0px 10px 0;
     text-shadow: 1px 1px 10px black, 0 0 1em rgb(0, 0, 0), 0 0 .5em rgb(0, 0, 0);
 }
+.home-text h1 span{
+    color: var(--color-5);
+    font-family: 'Varela Round', sans-serif;
+}
 .home-text h2{
+    font-family: 'Varela Round', sans-serif;
     align-content: center;
-    color: #eeff00;
+    color: var(--color-2);
     background:transparent;
-    width: 70%;
-    margin: 20% 20%;
     text-align: center;
+    padding: 0 20px;
     font-size: 30px;
-    margin: 20px 0 20px 0 20px;
-    /* text-shadow: 1px 1px 5px black; */
+    text-shadow: 1px 1px 10px black, 0 0 1em rgb(0, 0, 0), 0 0 .5em rgb(0, 0, 0);
    
 }
 /* END MAIN */
 
 /* ===sec 1==== */
 #sec1 {
-    height: 860px;
+    height: auto;
     background-image: url(../img/500.jpg);
     background: rgb(35, 48, 75);
     padding: 0.5em;
