--- a/css/responsive.css
+++ b/css/responsive.css
@@ -136,4 +136,33 @@
         /* text-shadow: 1px 1px 10px black, 0 0 10px blue, 0 0 10px blue; */
        
     }
+    .proj-card{
+        height: 330px;
+        width: 300px;
+        border-radius: 20px;
+        box-shadow: 0 0 10px #000000;
+        border: solid 2px transparent;
+        margin: auto;
+    }
+
+    .contact-container{
+        display: flex;
+        flex-direction: column;
+        width: 60%;
+        margin: auto;
+        align-items: center;
+    }
+    footer{
+        height: 80px;
+    }
+    footer h2{
+        font-family: 'Courier New', Courier, monospace;
+        color: var(--color-3);
+        font-size: 10px;
+    }
+    footer h3{
+        font-family: 'Courier New', Courier, monospace;
+        color: var(--color-3);
+        font-size: 12px;
+    }
 }
