--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,13 @@
 :root{
     --color-1: #0ff;
     --color-2: #6993fd;
-    --color-3: #2f00ff;
+    --color-3: #001aff;
     --color-4: #ff00a5;
     --color-5: #ff5e00;
     --color-input: #fa1185d0;
-    --color-nav: #1a1f47;
-    --color-bg: #404258;
+    --color-nav: #262a44;
+    --color-bg: #242436;
+    --color-footer: #04040c;
 }
 
 /* scroll bar */
@@ -163,13 +164,13 @@ nav ul li a:hover{
     padding-right: 10px;
 }
 .search-container a{
-    font-size: 20px;
+    font-size: 26px;
     padding: 3px;
     color: var(--color-3);
     transition: all 0.2s;
 }
 .search-container a:hover{
-    font-size: 28px;
+    font-size: 30px;
     color: var(--color-4);
 }
 /* =====SEARCH COMPONENT END===== */
@@ -260,9 +261,9 @@ nav ul li a:hover{
 /* ===services ==== */
 #services {
     height: auto;
+    padding: 60px 20px;
     /* background-image: url(../img/500.jpg); */
     background: var(--color-bg);
-    padding: 0.5em;
 }
 .services-container{
     height: auto;
@@ -278,83 +279,10 @@ nav ul li a:hover{
     border: 1px solid #ccc;
 }
 .titulo{
-    padding-left: 30px;
+    padding-left: 28px;
     color: #00ffc8;
 }
-.container {
-    background: transparent;
-    display: inline-flex;
-    padding: 25px 0;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
 
-.serv1, .serv2, .serv3, .serv4 {
-    box-shadow: rgb(0 0 0 / 19%) 0px 10px 20px, rgb(0 0 0 / 23%) 0px 6px 6px;
-}
-.serv1,
-.serv2,
-.serv3,
-.serv4 {
-    width: calc(25 / 4);
-    max-width: 300px;
-    margin: 20px 30px;
-    border: solid 2px transparent;
-    border-radius: 10px;
-    cursor: default;
-    transition: all .2s ease 0s;
-    box-shadow: 0 0 10px #000000;
-}
-
-.serv1:hover,
-.serv2:hover,
-.serv3:hover,
-.serv4:hover {
-    border: solid 2px rgb(0, 238, 255);
-    opacity: 1;
-    visibility: visible;
-    box-shadow: 0 0 10px #000000;
-}
-
-
-
-
-.formascontainer{
-    border: solid 1px skyblue;
-    border-radius: 4px;
-    padding: 25px;
-    box-shadow: 0 0 10px #000000;
-}
-.imges img {
-    /*margin: -200px 0;*/
-    width: 100%;
-    height: 209px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-.sociales img {
-    width: 40px;
-    height: 40px;
-    margin-left: 20px;
-    margin-bottom: 20px;
-    cursor: pointer;
-}
-.formaContacto {
-    display: inline-flex;
-    padding: 15px 30px 15px 30px;
-}
-
-.formaContacto a{
-	color: #41aaa8;
-	transition: all .5s ease;
-}
-
-.formaContacto a:hover{
-	color: rgb(7, 207, 207);
-	text-decoration: none;
-}
 
 /* ======project===== */
 #project{
@@ -374,7 +302,7 @@ nav ul li a:hover{
     grid-gap: 20px;
     align-items: stretch;
     height: 80%;
-    width: 80%;
+    margin: auto;
     padding: 10px 10px;
     border-radius: 20px;
     justify-items: center;
@@ -403,19 +331,59 @@ nav ul li a:hover{
     border-top-left-radius: 20px;
 }
 
+#contact{
+    background-color: rgb(15, 15, 51);
+}
+.contact-container{
+    display: flex;
+    width: 60%;
+    margin: auto;
+    justify-content: space-between;
+}
+.contact-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 0;
+    padding: 10px 0;
+    height: 200px;
+    width: 186px;
+    border-radius: 15px;
+    border: 2px solid rgba(59, 59, 59, 0.493);
+}
+.contact-card a{
+    font-size: 60px;
+    color: var(--color-3);
+    margin-bottom: 25px;
+}
+.contact-card h2{
+    font-size: 18px;
+}
+.contact-card h3{
+    font-size: 15px;
+}
 
 
 footer{
 	position: relative;
 	width: 100%;
 	height: 150px;
-    background-image: url(../img/500.jpg);
+    background-color: var(--color-footer);
 	display: flex;
     flex-direction: column;
 	align-items: center;
 	justify-content: center;
 }
-.contact{
-    display: flex;
-    align-items: center;
+footer h2{
+    font-family: 'Courier New', Courier, monospace;
+    color: var(--color-3);
+    font-size: 18px;
+}
+footer h3{
+    font-family: 'Courier New', Courier, monospace;
+    color: var(--color-3);
+    font-size: 15px;
+}
+footer span{
+    color: var(--color-5);
 }
