--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,10 @@ nav ul li a:hover{
 /* END MAIN */
 
 /* ===services ==== */
+.titulo{
+    padding-left: 28px;
+    color: #00ffc8;
+}
 #services {
     height: auto;
     padding: 60px 20px;
@@ -271,18 +275,35 @@ nav ul li a:hover{
 }
 .services{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(100%,200px), 1fr));
     grid-gap: 20px;
-    width: 85%;
+    width: minmax(min(100%,80%));
     height: auto;
     margin: auto;
     border: 1px solid #ccc;
 }
-.titulo{
-    padding-left: 28px;
-    color: #00ffc8;
+.services .card{
+    height: 330px;
+    width: auto;
+    border-radius: 20px;
+    box-shadow: 0 0 10px #000000;
+    border: solid 2px transparent;
+    margin: auto;
 }
-
+.services .card h1{
+    font-family: 'Varela Round', sans-serif;
+    font-size: 15px;
+    color: var(--color-2)
+}
+.services .card:hover{
+    border: solid 2px var(--color-1);
+}
+.services .card img{
+    width: 100%;
+    height: 70%;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+}
 
 /* ======project===== */
 #project{
@@ -298,7 +319,7 @@ nav ul li a:hover{
 }
 #project .projects{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 20px;
     align-items: stretch;
     height: 80%;
@@ -310,7 +331,7 @@ nav ul li a:hover{
 
 .proj-card{
     height: 330px;
-    width: 330px;
+    width: auto;
     border-radius: 20px;
     box-shadow: 0 0 10px #000000;
     border: solid 2px transparent;
