--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,9 @@
 	font-family: 'Josefin Sans', sans-serif;
 	box-sizing: border-box;
 }
+body{
+    max-width: 1400px;
+}
 
 /* ===MENU==== */
 .navbar {
@@ -272,13 +275,13 @@ nav ul li a:hover{
 }
 .services-container{
     height: auto;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
 }
 .services{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(min(100%,200px), 1fr));
     grid-gap: 20px;
-    width: minmax(min(100%,80%));
+    width: 90%;
     height: auto;
     margin: auto;
     border: 1px solid #ccc;
