--- a/css/libros.css
+++ b/css/libros.css
@@ -1,19 +1,17 @@
-#banner-template{
-    display: flex;
-    height: 1200px;
+#iframe-section{ 
     width: 100%;
+    height: 650px;
     background-color: var(--color-bg);
-    background-size: 100% 100%;
-    overflow: hidden;
-    background-position: center;
 }
 .iframe-container{
+    position: relative;
+    height: 90%;
     width: 90%;
+    max-width: calc(var(--break-point-extra-large) + 65px);
     border-radius: 15px;
     border: solid 2px rgb(0, 110, 255);
     margin: 0px auto;
-    margin-top: 80px;
-    margin-bottom: 60px;
+    top: 60px;
 }
 .iframe-container iframe{
     border-radius: 15px;
