--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     --color-nav: #262a44;
     --color-bg: #242436;
     --color-footer: #04040c;
+    --breakpoint-extra-large: 1100px;
 }
 
 /* scroll bar */
@@ -51,6 +52,7 @@
     margin: 5px 7px;
     justify-content: center;
     box-shadow: 0 0 10px var(--color-1);
+    z-index: 99;
 }
 .logo{
     display: flex;
@@ -261,13 +263,20 @@ nav ul li a:hover{
 
 /* ===services ==== */
 .titulo{
-    padding-left: 28px;
+    margin: auto;width: 100%;
+    max-width: var(--breakpoint-extra-large);
+}
+.titulo h1{
+    font-family: 'Varela Round';
+    padding: 20px 0;
     color: #00ffc8;
+    font-size: 2rem;
+    font-weight: bolder;
 }
 #services {
     height: auto;
+    max-width: 100%;
     padding: 60px 20px;
-    /* background-image: url(../img/500.jpg); */
     background: var(--color-bg);
 }
 .services-container{
@@ -277,11 +286,11 @@ nav ul li a:hover{
 .services{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(min(100%,200px), 1fr));
-    grid-gap: 20px;
-    width: 90%;
+    grid-gap: 28px;
+    /* width: 90%; */
+    max-width: var(--breakpoint-extra-large);
     height: auto;
     margin: auto;
-    border: 1px solid #ccc;
 }
 .services .card{
     height: 330px;
@@ -359,14 +368,14 @@ nav ul li a:hover{
 .contact-container{
     display: flex;
     width: 60%;
-    margin: auto;
+    max-width: var(--breakpoint-extra-large);margin: auto;
     justify-content: space-between;
 }
 .contact-card{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px 0;
+    margin-bottom: 20px;
     padding: 10px 0;
     height: 200px;
     width: 186px;
@@ -386,16 +395,17 @@ nav ul li a:hover{
 }
 
 
-footer{
-	position: relative;
+footer-copyrigth{
+	/* position: relative; */
 	width: 100%;
-	height: 150px;
+	height: 80px;
     background-color: var(--color-footer);
 	display: flex;
     flex-direction: column;
 	align-items: center;
 	justify-content: center;
-}
+    margin-bottom: 0px;
+    bottom: 0px;}
 footer h2{
     font-family: 'Courier New', Courier, monospace;
     color: var(--color-3);
