--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 1140px) {
     nav ul li a{
-        font-size: 12px;
+        font-size: 18px;
     }
 }
 @media only screen and (max-width: 990px){
@@ -23,12 +23,12 @@
         margin: 5px 7px;
         justify-content: center;
         box-shadow: 0 0 10px var(--color-1);
-    }
+    z-index: 99;}
     .navbarm{
         display: flex;
         width: 100%;
         align-content: space-between;
-    }
+    z-index: 99;}
     .logo{
         display: flex;
         align-items: center;
@@ -43,7 +43,7 @@
         height: 95%;
         right: 10px;
         position: absolute;
-    }
+    z-index: 99;}
     .pad span {
         background-color: var(--color-5);
         display: block;
@@ -54,21 +54,18 @@
     }
     /* navvvv */
     .nav{
-        flex-direction: column;
-        background: rgb(42, 17, 82);
-        width: 400px;
-        height: 800px;
-        padding: 0px 20px;
-        margin-top: 65px;
-        border-bottom-right-radius: 15px;
-        border-bottom-left-radius: 15px;
+        background: var(--color-nav);
+        width: 100%;
+        height: 920px;
+        border-bottom-right-radius: 20px;
+        border-bottom-left-radius: 20px;
         flex-wrap: wrap;
-        align-content: center;
+        align-items: center;
         transition: all 0.2s;
-    }
+    position: inherit;}
     .nav-menu-visible{
-        display: none;
-    }
+        /* display: none; */
+    transform: translate(0px, -920px);}
 
 
     .navbarli{
@@ -76,8 +73,8 @@
         flex-direction: column;
         justify-content: flex-end;
         padding: 20px 10px;
-        width: 150px;
-        height: 100%;
+        width: 70%;
+        margin: auto;height: 100%;
 
     }
     .navbarli li{
@@ -96,6 +93,13 @@
         position: relative;
         
     }
+    .search-container{
+        display: none;
+
+    }
+
+
+
 
     .banner{
         display: flex;
@@ -107,7 +111,7 @@
         background-position: center;
     }
     .home-text{
-        align-content: center;
+        /* align-content: center; */
         color: #fff;
         background: rgba(0, 0, 0, .6);
         margin: 50px auto;
@@ -128,21 +132,13 @@
         align-content: center;
         color: #eeff00;
         background:transparent;
-        width: 70%;
-        margin: 20% 20%;
+        /* width: 70%; */
+        /* margin: 20% 20%; */
         text-align: center;
         font-size: 20px;
         margin: 20px 0 20px 0 20px;
         /* text-shadow: 1px 1px 10px black, 0 0 10px blue, 0 0 10px blue; */
        
-    }
-    .proj-card{
-        height: 330px;
-        width: 300px;
-        border-radius: 20px;
-        box-shadow: 0 0 10px #000000;
-        border: solid 2px transparent;
-        margin: auto;
     }
 
     .contact-container{
