--- a/css/blog.css
+++ b/css/blog.css
@@ -25,7 +25,7 @@
     flex-direction: column;
     width: 100%;
     height: auto;
-    padding-top: 40px;
+    /* padding-top: 40px; */
     padding-bottom: 80px;
     justify-content: center;
 }
