--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,7 @@ nav ul li a:hover{
     cursor: pointer;
     box-shadow: 0 0 10px #000000;
     transition: all 0.2s;
+    z-index: 99;
 }
 
 .btn-float i{
