--- a/css/blog.css
+++ b/css/blog.css
@@ -18,6 +18,7 @@
     width: 100%;
     justify-content: center;
     background-color: var(--color-bg);
+    padding: 0 20px;
     padding-top: 60px;
 }
 .blog-container{
@@ -45,12 +46,12 @@
     align-items: center;
     gap: 16px;
     width: 100%;
-    height: 800px;
+    height: 1500px;
     
 flex-direction: column;align-items: center;}
 
 .blog-card img{
-    width: 280px;
+    width: 274px;
     border-radius: 12px;
 
 }
