--- a/css/style.css
+++ b/css/style.css
@@ -299,16 +299,27 @@ nav ul li a:hover{
 }
 .services .card{
     height: 330px;
-    width: auto;
+    width: 100%;
     border-radius: 20px;
     box-shadow: 0 0 10px #000000;
     border: solid 2px transparent;
     margin: auto;
 }
+.card .card-title{
+    width: 100%;
+    height: 30%;display: flex;
+flex-direction: column;align-items: center;/* margin-bottom: 0px; */}
 .services .card h1{
     font-family: 'Varela Round', sans-serif;
     font-size: 15px;
-    color: var(--color-2)
+    color: var(--color-2);
+    text-align: center;padding: 12px 0;}
+.services .card a{
+    color: var(--color-1);
+    text-decoration: none;
+    /* width: 100%; */
+    padding: 5px 10px;/* margin-top: 30px; */transform: translate(10px, 10px);border-radius: 50vh;
+    border: solid 2px var(--color-3);
 }
 .services .card:hover{
     border: solid 2px var(--color-1);
@@ -394,9 +405,11 @@ padding: 0 20px;}
 }
 .contact-card h2{
     font-size: 18px;
+    color: #6b6baa;
 }
 .contact-card h3{
     font-size: 15px;
+    color: #9d36a7;
 }
 
 
