--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,20 @@ html {
     scroll-behavior: smooth;
     scroll-padding-top: 60px;
 }
+
+#preloader{
+    background-color: #000;
+    background-image: url(../img/preloader.gif);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 30%;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 1000;
+}
+
+
 *{
 	padding: 0;
 	margin: 0;
