--- a/css/responsive.css
+++ b/css/responsive.css
@@ -159,8 +159,8 @@
         align-items: center;
     }
 
-    footer {
-        height: 80px;
+    footer-copyrigth {
+        height: 60px;
     }
 
     footer h2 {
