--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,7 @@ nav ul li a:hover{
     height: auto;
     margin: auto;
 }
-.services .card{
+.card{
     height: 330px;
     width: 100%;
     border-radius: 20px;
@@ -318,22 +318,22 @@ nav ul li a:hover{
     width: 100%;
     height: 30%;display: flex;
 flex-direction: column;align-items: center;/* margin-bottom: 0px; */}
-.services .card h1{
+.card h1{
     font-family: 'Varela Round', sans-serif;
     font-size: 15px;
     color: var(--color-2);
     text-align: center;padding: 12px 0;}
-.services .card a{
+.card a{
     color: var(--color-1);
     text-decoration: none;
     /* width: 100%; */
     padding: 5px 10px;/* margin-top: 30px; */transform: translate(10px, 10px);border-radius: 50vh;
     border: solid 2px var(--color-3);
 }
-.services .card:hover{
+.card:hover{
     border: solid 2px var(--color-1);
 }
-.services .card img{
+.card img{
     width: 100%;
     height: 70%;
     border-top-right-radius: 20px;
@@ -354,29 +354,6 @@ flex-direction: column;align-items: center;/* margin-bottom: 0px; */}
     max-width: var(--breakpoint-extra-large);
     height: auto;
     margin: auto;
-}
-
-.proj-card{
-    height: 330px;
-    width: auto;
-    border-radius: 20px;
-    box-shadow: 0 0 10px #000000;
-    border: solid 2px transparent;
-    margin: auto;
-}
-.projects h1{
-    font-family: 'Varela Round', sans-serif;
-    font-size: 15px;
-    color: var(--color-2)
-}
-.proj-card:hover{
-    border: solid 2px var(--color-1);
-}
-.proj-card img{
-    width: 100%;
-    height: 70%;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
 }
 
 #contact{
