--- a/css/style.css
+++ b/css/style.css
@@ -344,8 +344,8 @@ flex-direction: column;align-items: center;/* margin-bottom: 0px; */}
 #projects{
     height: auto;
     background-color: var(--color-bg);
-    padding: 10px 0px;
-    justify-content: center;
+    padding: 0 20px;
+    padding-bottom: 20px;justify-content: center;
 }
 #projects .projects{
     display: grid;
@@ -353,7 +353,7 @@ flex-direction: column;align-items: center;/* margin-bottom: 0px; */}
     grid-gap: 28px;
     max-width: var(--breakpoint-extra-large);
     height: auto;
-    margin: auto;
+    /* padding: 0px 20px; */margin: auto;
 }
 
 #contact{
