--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,37 @@
-
 /* esto es un prueba par agit */
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
-:root{
+
+:root {
     --color-1: #0ff;
     --color-2: #6993fd;
     --color-3: #001aff;
     --color-4: #ff00a5;
     --color-5: #ff5e00;
     --color-input: #fa1185d0;
-    --color-nav: #262a44;
-    --color-bg: #242436;
+    --color-nav: #11002e;
+    --color-bg: #1e1e36;
     --color-footer: #04040c;
     --breakpoint-extra-large: 1100px;
 }
 
 /* scroll bar */
 ::-webkit-scrollbar {
-  width: 5px;
+    width: 5px;
 }
+
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(70, 55, 207); 
-  border-radius: 10px;
+    box-shadow: inset 0 0 5px rgb(70, 55, 207);
+    border-radius: 10px;
 }
+
 ::-webkit-scrollbar-thumb {
-  background: var(--color-1);
-  border: solid 1px rgb(0, 0, 0);
-  border-radius: 10px;
+    background: var(--color-1);
+    border: solid 1px rgb(0, 0, 0);
+    border-radius: 10px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
-  background: #ff00bf; 
+    background: #ff00bf;
 
 }
 
@@ -37,7 +40,7 @@ html {
     scroll-padding-top: 60px;
 }
 
-#preloader{
+#preloader {
     background-color: #000;
     background-image: url(../img/preloader.gif);
     background-position: center;
@@ -50,11 +53,11 @@ html {
 }
 
 
-*{
-	padding: 0;
-	margin: 0;
-	font-family: 'Josefin Sans', sans-serif;
-	box-sizing: border-box;
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Josefin Sans', sans-serif;
+    box-sizing: border-box;
 }
 
 /* ===MENU==== */
@@ -65,78 +68,92 @@ html {
     width: 99%;
     align-items: center;
     background-color: var(--color-nav);
-    border:solid 2px var(--color-1);
+    border: solid 2px var(--color-1);
     border-radius: 50vh;
     margin: 5px 7px;
     justify-content: center;
     box-shadow: 0 0 10px var(--color-1);
     z-index: 99;
 }
-.logo{
+
+.logo {
     display: flex;
     align-items: center;
     width: 5%;
     padding-left: 10px;
     color: var(--color-5);
 }
-.logo img{
+
+.logo img {
     width: 45px;
-}.logo h1{
-    display: inline-block;
 }
-.nav{
+
+.logo h1 {
+    font-family: 'Varela Round', sans-serif;
+    text-decoration: solid;
+    font-weight: bold;
+    font-size: 2rem;
+    text-shadow: 2px 0 0;
+}
+
+.nav {
     display: flex;
     padding: 0px 10px;
     width: 95%;
     justify-content: space-between;
 }
-.navbarli{
+
+.navbarli {
     display: flex;
     background: transparent;
     list-style-type: none;
 }
-nav ul li{
+
+nav ul li {
     display: flex;
     align-items: center;
     background: transparent;
-	list-style-type: none;
-	padding: 0px  10px;
+    list-style-type: none;
+    padding: 0px 10px;
 }
-nav ul li a{
+
+nav ul li a {
     font-family: 'Varela Round', sans-serif;
     font-size: 16px;
     background: transparent;
-	color: var(--color-1);
-	text-decoration: none;
-	font-weight: bold;
+    color: var(--color-1);
+    text-decoration: none;
+    font-weight: bold;
     position: relative;
-    
+
 }
 
 /* hover border botton */
 a::after {
-	position: absolute;
-	content: "";
-	width: 0%;
-	height: 4px;
-	background-color: var(--color-4);
+    position: absolute;
+    content: "";
+    width: 0%;
+    height: 4px;
+    background-color: var(--color-4);
     color: var(--color-4);
-	left: 50%;
-	bottom: -8px;
-	transition: all .2s ease-in-out;
-}
-li:hover a::after {
-	width: 100%;
-	left: 0;
-}
-nav ul li a:hover{
-	color: var(--color-4);
-	transition: .3s;
+    left: 50%;
+    bottom: -8px;
+    transition: all .2s ease-in-out;
 }
 
-.active a{
-	color: var(--color-4);
-	transition: .3s;
+li:hover a::after {
+    width: 100%;
+    left: 0;
+}
+
+nav ul li a:hover {
+    color: var(--color-4);
+    transition: .3s;
+}
+
+.active a {
+    color: var(--color-4);
+    transition: .3s;
 }
 
 
@@ -147,9 +164,10 @@ nav ul li a:hover{
     width: 200px;
     justify-content: center;
 }
+
 .searchTerm {
     width: 100%;
-    background:var(--color-1);
+    background: var(--color-1);
     border-top: 3px solid var(--color-5);
     border-left: 3px solid var(--color-5);
     border-bottom: 3px solid var(--color-5);
@@ -160,13 +178,15 @@ nav ul li a:hover{
     outline: none;
     color: #00ff88;
 }
-.searchTerm:focus{
+
+.searchTerm:focus {
     color: #000000;
 }
+
 .searchButton {
     width: 40px;
     height: 30px;
-    background:var(--color-1);
+    background: var(--color-1);
     border-top: 3px solid var(--color-5);
     border-right: 3px solid var(--color-5);
     border-bottom: 3px solid var(--color-5);
@@ -179,29 +199,33 @@ nav ul li a:hover{
 }
 
 /*Resize the wrap to see the search bar change!*/
-.search-container{
+.search-container {
     display: flex;
     align-items: center;
     padding-right: 10px;
 }
-.search-container a{
+
+.search-container a {
     font-size: 26px;
     padding: 3px;
     color: var(--color-3);
     transition: all 0.2s;
 }
-.search-container a:hover{
+
+.search-container a:hover {
     font-size: 30px;
     color: var(--color-4);
 }
+
 /* =====SEARCH COMPONENT END===== */
 
 /* =====END MENU======= */
-#secction{
+#secction {
     background-color: var(--color-bg);
+    background-size: cover;
 }
 
-.btn-float{
+.btn-float {
     display: flex;
     position: fixed;
     width: 60px;
@@ -221,119 +245,142 @@ nav ul li a:hover{
     z-index: 99;
 }
 
-.btn-float i{
+.btn-float i {
     font-size: 40px;
 }
 
 
-.btn-float:hover{
+.btn-float:hover {
     width: 70px;
     height: 70px;
     background-color: #64ff7e;
 }
+
 /* MAIN */
-.banner{
-    display: flex;
-    height: 860px;
+#home {
+    height: 100vh;
     width: 100%;
-    background-image: url(../img/banner1.jpg);
-    /* background-color: var(--color-bg); */
+    background-image: url(../img/bg-03.png);
     background-size: 100% 100%;
+    background-position: center;
+    /* background-size: cover; */
+}
+
+.banner {
+    display: flex;
+    height: calc(100vh-50px);
+    width: 100%;
     overflow: hidden;
     background-position: center;
 }
-.home-text{
-    align-content: center;
-    justify-content: center;
-    color: #fff;
-    background: rgba(0, 0, 0, 0.575);
-    margin: 50px auto;
-    margin-top: 200px;
+
+.home-text {
+    background: rgb(6 4 18 / 57%);
+    margin: 20vh auto;
+    padding: 20px;
     max-width: 60%;
     max-height: 60%;
     border-radius: 20px 20px;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.678);
+    box-shadow: 0 0 15px rgb(0 0 0 / 68%);
 }
+
 .home-text h1 {
     font-family: 'Varela Round', sans-serif;
-    padding-top: 20px;
     color: #00ffc8;
     text-align: center;
     font-size: 50px;
-    margin: 20px 0px 10px 0;
     text-shadow: 1px 1px 10px black, 0 0 1em rgb(0, 0, 0), 0 0 .5em rgb(0, 0, 0);
 }
-.home-text h1 span{
+
+.home-text h1 span {
     color: var(--color-5);
     font-family: 'Varela Round', sans-serif;
 }
-.home-text h2{
+
+.home-text h2 {
     font-family: 'Varela Round', sans-serif;
-    align-content: center;
     color: var(--color-2);
-    background:transparent;
-    text-align: center;
-    padding: 0 20px;
+    padding: 5px 0;
     font-size: 30px;
-    /* text-shadow: 1px 1px 10px black, 0 0 1em rgb(0, 0, 0), 0 0 .5em rgb(0, 0, 0); */
-   
+    text-align: center;
 }
+
 /* END MAIN */
 
 /* ===services ==== */
-.titulo{
-    margin: auto;width: 100%;
+.titulo {
+    margin: auto;
+    width: 100%;
     max-width: var(--breakpoint-extra-large);
 }
-.titulo h1{
+
+.titulo h1 {
     font-family: 'Varela Round';
     padding: 20px 0;
     color: #00ffc8;
     font-size: 2rem;
     font-weight: bolder;
 }
+
 #services {
     height: auto;
     max-width: 100%;
     padding: 0px 20px;
-    padding-bottom: 20px;background: var(--color-bg);
+    padding-bottom: 20px;
+    background: var(--color-bg);
 }
-#services .services{
+
+#services .services {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(100%,200px), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(100%, 200px), 1fr));
     grid-gap: 28px;
     max-width: var(--breakpoint-extra-large);
     height: auto;
     margin: auto;
 }
-.card{
+
+.card {
     height: 330px;
     width: 100%;
     border-radius: 20px;
     box-shadow: 0 0 10px #000000;
-    border: solid 2px transparent;
+    border: solid 2px #11002e;
     margin: auto;
 }
-.card .card-title{
+
+.card .card-title {
     width: 100%;
-    height: 30%;display: flex;
-flex-direction: column;align-items: center;/* margin-bottom: 0px; */}
-.card h1{
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* margin-bottom: 0px; */
+}
+
+.card h1 {
     font-family: 'Varela Round', sans-serif;
     font-size: 15px;
     color: var(--color-2);
-    text-align: center;padding: 12px 0;}
-.card a{
+    text-align: center;
+    padding: 12px 0;
+}
+
+.card a {
     color: var(--color-1);
     text-decoration: none;
     /* width: 100%; */
-    padding: 5px 10px;/* margin-top: 30px; */transform: translate(10px, 10px);border-radius: 50vh;
+    padding: 5px 10px;
+    /* margin-top: 30px; */
+    transform: translate(10px, 10px);
+    border-radius: 50vh;
     border: solid 2px var(--color-3);
 }
-.card:hover{
+
+.card:hover {
     border: solid 2px var(--color-1);
 }
-.card img{
+
+.card img {
     width: 100%;
     height: 70%;
     border-top-right-radius: 20px;
@@ -341,31 +388,38 @@ flex-direction: column;align-items: center;/* margin-bottom: 0px; */}
 }
 
 /* ======project===== */
-#projects{
+#projects {
     height: auto;
     background-color: var(--color-bg);
     padding: 0 20px;
-    padding-bottom: 20px;justify-content: center;
+    padding-bottom: 20px;
+    justify-content: center;
 }
-#projects .projects{
+
+#projects .projects {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(100%,200px), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(100%, 200px), 1fr));
     grid-gap: 28px;
     max-width: var(--breakpoint-extra-large);
     height: auto;
-    /* padding: 0px 20px; */margin: auto;
+    /* padding: 0px 20px; */
+    margin: auto;
 }
 
-#contact{
+#contact {
     background-color: rgb(15, 15, 51);
-padding: 0 20px;}
-.contact-container{
+    padding: 0 20px;
+}
+
+.contact-container {
     display: flex;
     width: 60%;
-    max-width: var(--breakpoint-extra-large);margin: auto;
+    max-width: var(--breakpoint-extra-large);
+    margin: auto;
     justify-content: space-between;
 }
-.contact-card{
+
+.contact-card {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -376,41 +430,48 @@ padding: 0 20px;}
     border-radius: 15px;
     border: 2px solid rgba(59, 59, 59, 0.493);
 }
-.contact-card a{
+
+.contact-card a {
     font-size: 60px;
     color: var(--color-3);
     margin-bottom: 25px;
 }
-.contact-card h2{
+
+.contact-card h2 {
     font-size: 18px;
     color: #6b6baa;
 }
-.contact-card h3{
+
+.contact-card h3 {
     font-size: 15px;
     color: #9d36a7;
 }
 
 
-footer-copyrigth{
-	width: 100%;
-	height: 80px;
+footer-copyrigth {
+    width: 100%;
+    height: 80px;
     background-color: var(--color-footer);
-	display: flex;
+    display: flex;
     flex-direction: column;
-	align-items: center;
-	justify-content: center;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 0px;
-    bottom: 0px;}
-footer h2{
+    bottom: 0px;
+}
+
+footer h2 {
     font-family: 'Courier New', Courier, monospace;
     color: var(--color-3);
     font-size: 18px;
 }
-footer h3{
+
+footer h3 {
     font-family: 'Courier New', Courier, monospace;
     color: var(--color-3);
     font-size: 15px;
 }
-footer span{
+
+footer span {
     color: var(--color-5);
 }
