--- a/css/style.css
+++ b/css/style.css
@@ -117,27 +117,32 @@ nav ul li {
     padding: 0px 10px;
 }
 
-nav ul li a {
+nav .menu {
     font-family: 'Varela Round', sans-serif;
     font-size: 16px;
     background: transparent;
     color: var(--color-1);
+    padding: 2px 0;
+    border-bottom: solid 4px transparent;
     text-decoration: none;
     font-weight: bold;
     position: relative;
 
 }
-
+nav .menu.active{
+    color: var(--color-4);
+    border-bottom: solid 4px var(--color-4);
+}
 /* hover border botton */
 a::after {
     position: absolute;
     content: "";
     width: 0%;
     height: 4px;
-    background-color: var(--color-4);
+    border-bottom: solid 4px var(--color-4);
     color: var(--color-4);
     left: 50%;
-    bottom: -8px;
+    bottom: -4px;
     transition: all .2s ease-in-out;
 }
 
