--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,6 +12,10 @@
 
 /* ====== responsive mobile ===== */
 @media only screen and (max-width: 800px) {
+
+    #preloader {
+        background-size: 40%;
+    }
     .navbar {
         position: fixed;
         display: flex;
