--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ nav ul li a:hover {
     height: 30px;
     border-radius: 15px 0 0 15px;
     outline: none;
-    color: #00ff88;
+    /* color: #00ff88; */
 }
 
 .searchTerm:focus {
@@ -221,7 +221,9 @@ nav ul li a:hover {
     font-size: 30px;
     color: var(--color-4);
 }
-
+.pad.bx.bx-menu{
+    display: none;
+}
 /* =====SEARCH COMPONENT END===== */
 
 /* =====END MENU======= */
