--- a/css/blog.css
+++ b/css/blog.css
@@ -57,33 +57,35 @@
     ;
     text-decoration: none;
     font-size: 18px;
-/* height: 67px; */}
+    /* height: 67px; */
+}
 
 .blogs h3 {
     display: block;
     color: #03a9f4;
     font-size: 0.8rem;
-    font-weight: 100;
+    font-weight: 300;
     font-family: system-ui;
-    margin-bottom: 10px;
-    padding: au;
-    vertical-align: center;padding: auto;
-/* align-items: center; *//* align-content: center; */height: 50%;}
+    /* margin-bottom: 10px; */
+}
 
 @media only screen and (max-width: 540px) {
     #blog {
         width: 100%;
         padding: 0 14px;
-    padding-top: 60px;}
+        padding-top: 60px;
+    }
 
     .blog-card {
         width: 100%;
         height: 84px;
+        border-radius: 8px;
     }
 
     .blog-card img {
         width: 115px;
 
+        border-radius: 8px;
     }
 
     .blogs .prev {
@@ -92,6 +94,7 @@
 
     .blogs a {
         font-size: 14px;
+        /* height: 100%; */
     }
 
     .blogs h3 {
