--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,9 +16,11 @@
     #preloader {
         background-size: 40%;
     }
-    .titulo h1{
+
+    .titulo h1 {
         font-size: 1rem;
     }
+
     .navbar {
         position: fixed;
         display: flex;
@@ -50,9 +52,11 @@
         color: var(--color-5);
         z-index: 99;
     }
-    .pad.bx.bx-menu{
+
+    .pad.bx.bx-menu {
         display: block;
     }
+
     .pad {
         display: block;
         cursor: pointer;
@@ -76,13 +80,15 @@
         align-items: center;
         transition: all 0.2s;
         position: inherit;
-    box-shadow: 0 10px 50px #000;}
+        box-shadow: 0 10px 50px #000;
+    }
 
-.nav {}
+    .nav {}
 
     .nav-menu-visible {
         transform: translate(0px, -920px);
     }
+
     .navbarli {
         display: flex;
         flex-direction: column;
@@ -118,10 +124,12 @@
         z-index: 100;
     }
 
-    #home{
+    #home {
         height: 100vh;
 
-    /* background-size: cover;/* background-size: 100% 100%; */background-size: cover;}
+        /* background-size: cover;/* background-size: 100% 100%; */
+        background-size: cover;
+    }
 
     .home-text {
         background: rgb(6 4 18 / 57%);
